Lamps shadows are not refreshed when tweaking lamps parameters #52705

Closed
opened 2017-09-11 16:12:40 +02:00 by Clément Foucault · 5 comments

Tweak "Soft" parameter under the shadow tab, the light shadow should be updating.

The other parameters (except shadow clip values) works because they are updated every frame.

This should be executed and trigger the shadow refresh.

deg_graph_flush_updates()

object->deg_update_flag |= DEG_RUNTIME_DATA_UPDATE;

lamp_update.blend

Tweak "Soft" parameter under the shadow tab, the light shadow should be updating. The other parameters (except shadow clip values) works because they are updated every frame. This should be executed and trigger the shadow refresh. > deg_graph_flush_updates() ``` object->deg_update_flag |= DEG_RUNTIME_DATA_UPDATE; ``` [lamp_update.blend](https://archive.blender.org/developer/F787891/lamp_update.blend)
Sergey Sharybin was assigned by Clément Foucault 2017-09-11 16:12:40 +02:00
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 74eed8e30e

This issue was referenced by 74eed8e30ee6203d48d51afa9703150b7abb71a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note: i've fixed dependency graph issue, so now changing that parameter causes EEVEE_draw_shadows to be called, and la->soft has correct values there. However, opening file with soft size of 45, going to 1 and back to 45 doesn't give same exact result. So afraid something else is involved here.

Also, soft size of 45 is taking lots of seconds on my GT620 card on Linux, 384.47 driver..

Note: i've fixed dependency graph issue, so now changing that parameter causes `EEVEE_draw_shadows` to be called, and `la->soft` has correct values there. However, opening file with soft size of 45, going to 1 and back to 45 doesn't give same exact result. So afraid something else is involved here. Also, soft size of 45 is taking lots of seconds on my GT620 card on Linux, 384.47 driver..
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52705
No description provided.