Fix T52705: Lamps shadows are not refreshed when tweaking lamps parameters

Lamp and camera datablocks updates should flush some updates to corresponding
objects. Currently it's done as Parameters -> Parameters relations.